--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="box-main">
             <div class="box2">
                <div class="Dedicated-space">
-                  <h1>A Dedicated Space To <br>Remember Your Loved One</h1>
+                  <h1>A Dedicated Space To Remember Your Loved One</h1>
                </div>
                <div class="Memorial">
                  <p>Our Memorial Pages elegantly incorporate service details, cherished photos, heartfelt condolences, and opportunities for charitable giving. Share memories effortlessly with loved ones, creating a comforting space for collective remembrance.</p>
@@ -36,11 +36,11 @@
             </div>
         </div>
 </div>
-<div class="container2">
-     <div class="div1">
+   <!-- <div class="container2">
+       <div class="div1">
         <div class="div1-box"></div>
-     </div>
-    <div class="box-main2">
+     </div> -->
+    <!-- <div class="box-main2">
         <div class="Memorial-Page">
             <div class="page1">
                 <h1>Memorial <br> Page Builder</h1>
@@ -79,7 +79,7 @@
         <div class="Memorial-img">
             <img src="memorial.png">
        </div>
-    </div>
-</div>
+    </div> -->
+<!-- </div>  -->
 </body>
 </html>
