--- a/index.html
+++ b/index.html
@@ -35,12 +35,20 @@
                  <img src="girl pic.png">
             </div>
         </div>
-</div>
-   <!-- <div class="container2">
-       <div class="div1">
-        <div class="div1-box"></div>
-     </div> -->
-    <!-- <div class="box-main2">
+</div> 
+
+<div class="container2">
+    <div class="outer-div">
+        <div class="div1">
+            <div class="div1-box"></div>
+            <div class="heading">
+                <h1>Memorial<br>Page Builder</h1>
+            </div>
+         </div> 
+    </div>
+
+    <div class="outer-main">
+      <div class="box-main2">
         <div class="Memorial-Page">
             <div class="page1">
                 <h1>Memorial <br> Page Builder</h1>
@@ -71,15 +79,28 @@
                     </div>
                 </div>
             </div>
+            <div class="outer-work">
             <div class="work">
                 <a href="How it Works">HOW IT WORKS</a>
                 <img src="https://eiternal.com/assets/right%20arrow%20black.png">
             </div>
         </div>
+    </div>
+       
         <div class="Memorial-img">
             <img src="memorial.png">
        </div>
-    </div> -->
-<!-- </div>  -->
+</div>
+</div>
+</div>
+
+
+
+
+
+
+
+
+
 </body>
 </html>
