--- a/index.html
+++ b/index.html
@@ -209,25 +209,25 @@
 
 
 
-<!-- <div class="container4">
+<div class="container4">
     <div class="heading6">
         <h1>Common Practices by Religion</h1>
     </div>
-    <div class="outer-images">
+      <div class="outer-images">
         <div class="flower-img">
             <img src="p4-flowerpic.png">
-        </div> -->
-        <!-- <div class="section-images">
+        </div> 
+         <div class="section-images">
            <div class="div1-img">
              <img src="https://eiternal.com/assets/christian.png">
              <h2>Christian Funeral</h2>
              <div class="overlay">
                 <h2 class="heading9">Christian Funeral</h2>
-                <p>Christian funeral ceremonies vary<br> depending on the denomination,<br> but most include prayers, hymns,<br> and a eulogy. The ceremony may<br> be held in a church, a funeral<br> home, or at a gravesite.</p>
+                 <p>Christian funeral ceremonies vary <br> depending on the denomination,<br> but most include prayers, hymns,<br> and a eulogy. The ceremony may<br> be held in a church, a funeral<br> home, or at a gravesite.</p> 
                 <img class="img1" src="https://eiternal.com/assets/right%20arrow%20white.svg">
              </div>
-           </div> -->
-           <!-- <div class="div2">
+           </div> 
+            <div class="div2">
              <img src="https://eiternal.com/assets/jew.png">
              <h2>Jewish Funeral</h2>
           
@@ -241,9 +241,9 @@
         </div>
            <div class="div3">
             <img src="https://eiternal.com/assets/muslim.png">
-             <h2>Muslim Funeral</h2> -->
+             <h2>Muslim Funeral</h2> 
 
-             <!-- <div class="overlay2">
+             <div class="overlay2">
                 <h2 class="heading11">Muslim Funeral</h2>
                 <p class="p7">The ceremony, or Janazah, is a<br> time for mourning and for seeking<br> 
                     forgiveness and blessings for<br> the deceased. The ceremony<br> typically involves the<br> 
@@ -259,8 +259,8 @@
                 <p class="p8">The ceremony, or Antyesti, is a<br> sacred ritual that marks the final<br> 
                      journey of the soul. The ceremony<br> typically involves the <br>following steps:</p>
                 <img class="img4" src="https://eiternal.com/assets/right%20arrow%20white.svg">
-             </div> -->
-       <!-- </div>
+             </div> 
+        </div>
           <div class="div6">
             <img src="https://eiternal.com/assets/jain.png">
             <h2>Jain Funeral</h2>
@@ -272,8 +272,8 @@
              </div>
           </div>
     </div>
-    </div>
-</div> -->
+    </div> 
+ </div> 
 
 
 
