Successfully Update Code

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
 
 
-<!-- <div class="container5">
+ <div class="container5">
      <div class="outer-container">
         <div class="outer-box1">
             <div class="eiternal">
@@ -292,8 +292,8 @@
                     <br>
                     <p>Eiternal helps take the stress out of organizing while you're trying to process your grief.</p>
                 </div>
-            </div> -->
-            <!-- <div class="outer-links">
+            </div> 
+             <div class="outer-links">
             <div class="about">
                 <h2>About</h2>
                 <p class="p1">Our Story</p>
@@ -301,15 +301,15 @@
                    <p>Regular</p>
                     <P>Services</P>
                     <p>FAQ</p>
-            </div> -->
-            <!-- <div class="links">
+            </div> 
+             <div class="links">
                 <h2>Links</h2>
                 <p class="p2">About us</p>
                 <p>Features</p>
                 <p>Blogs</p>
                 <P>Religions</P>
-            </div> -->
-            <!-- <div class="categories">
+            </div> 
+             <div class="categories">
                 <h2>Categories</h2>
                 <p class="p3">Funeral</p>
                 <p>Burrial</p>
@@ -319,9 +319,9 @@
             </div>
         </div>
      </div>
-</div> -->
+</div> 
 
-<!-- <div class="container6">
+<div class="container6">
     <div class="outer-container6">
         <div class="main-container">
             <div class="rights">
@@ -333,7 +333,7 @@
         </div>
     </div>
 
-</div> -->
+</div>
 
 
 
